include(${CMAKE_CURRENT_LIST_DIR}/lvgl.cmake)
add_library(lvgl ${lvgl_sources})
include(${CMAKE_CURRENT_LIST_DIR}/sqlite3.cmake)
add_library(sqlite3 STATIC ${sqlite3_sources})
target_compile_definitions(sqlite3 PRIVATE
    SQLITE_DQS=0
    SQLITE_DEFAULT_MEMSTATUS=0
    SQLITE_DEFAULT_SYNCHRONOUS=0
    SQLITE_DEFAULT_WAL_SYNCHRONOUS=0
    SQLITE_MAX_EXPR_DEPTH=0
    SQLITE_OMIT_DECLTYPE
    SQLITE_OMIT_DEPRECATED
    SQLITE_OMIT_LOAD_EXTENSION
    SQLITE_OMIT_PROGRESS_CALLBACK
    SQLITE_OMIT_SHARED_CACHE
    SQLITE_USE_ALLOCA
    SQLITE_OMIT_AUTOINIT
)
