add_library(avitab_gui_lvgl_widgets
    Widget.cpp
    Screen.cpp
    Container.cpp
    Window.cpp
    Label.cpp
    Button.cpp
    PixMap.cpp
    List.cpp
    TextArea.cpp
    Keyboard.cpp
    MessageBox.cpp
    TabGroup.cpp
    Page.cpp
    Checkbox.cpp
    DropDownList.cpp
    Slider.cpp
)
